music: Fix scrollbar popping up when launching

--- a/_assets/css/_music.sass
+++ b/_assets/css/_music.sass
@@ -59,9 +59,6 @@ body.music.launched
   text-align: center
   text-shadow: 3px 3px 1px #444
 
-  .launched &
-    display: block
-
   h2
     font-size: 80px
 
